--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,22 @@
 body {
-  background-color: #ec7a7a; /* Azul claro */
-  color: #000000;
+  background-color: #e6f7ff; /* Azul claro */
+  color: #333;
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  font-size: 22px;
 }
 
 .app-container {
   max-width: 800px;
-  margin: 55px auto;
-  padding: 30px;
+  margin: 50px auto;
+  padding: 20px;
   border-radius: 10px;
-  background-color: #ffffff; /* Fundo branco */
-  box-shadow: 0 4px 8px rgba(247, 245, 245, 0.1);
+  background-color: #fff; /* Fundo branco */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-  color: #000000; /* preto para o título principal */
+  color: #ff0000; /* Vermelho vibrante para o título principal */
   text-align: center;
   margin-bottom: 30px;
 }
@@ -25,63 +24,58 @@ h1 {
 .input-container {
   margin-bottom: 20px;
   padding: 10px;
-  border: 5px solid #706565; /* Bordas em cinza */
+  border: 2px solid #ff4500; /* Bordas em vermelho */
   border-radius: 5px;
-  background-color: #000000; /* Fundo preto*/
+  background-color: #ffe6e6; /* Fundo suave em tom de vermelho claro */
 }
 
 h2 {
-  color: #000000; /* Laranja vibrante para os dias da semana */
+  color: #ff4500; /* Laranja vibrante para os dias da semana */
   margin-bottom: 10px;
 }
 
 .periodo-container {
   margin-bottom: 10px;
-  padding: 10px;
-  border: 3px solid #000000; /* Bordas em vermelho */
-  border-radius: 2px;
-  background-color: #d8cccc; /* Fundo suave em tom de vermelho */
+  padding: 5px;
+  border: 1px solid #ff4500; /* Bordas em vermelho */
+  border-radius: 5px;
+  background-color: #ffcccb; /* Fundo suave em tom de vermelho */
 }
+
+
 
 label {
   display: inline-block;
   width: 100px;
-  color: #fcfcfc; /* preto escuro para os rótulos */
-  font-family: 'Roboto', sans-serif;
-  font-size: 22px;
+  color: #000000; /* preto para os rótulos */
 }
+
 
 input[type="text"],
 select {
   width: calc(100% - 110px);
   padding: 8px;
-  border: 2px solid #706565; /* Bordas do campo de texto em vermelho */
-  margin: 10px;
-  text-align: center;
+  border: 1px solid #d9534f; /* Bordas do campo de texto em vermelho */
   border-radius: 5px;
-  font-size: 20px;
-  background-color: #7e7676; /* Fundo suave no campo de entrada */
+  background-color: #ffe4e1; /* Fundo suave no campo de entrada */
 }
 
 input[type="text"]:focus,
 select:focus {
-  border-color: #ff0000; /* Realce da borda ao focar */
+  border-color: #ff6347; /* Realce da borda ao focar */
   outline: none;
-  
 }
 
 button {
-  background-color: #706565; /* cinza */
-  color: rgb(247, 242, 242);
+  background-color: #ff4500; /* Vermelho */
+  color: white;
   padding: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 20px;
-  margin: 4px;
+  font-size: 16px;
 }
 
 button:hover {
-  background-color: #ff0000; /* Vermelho escuro */
+  background-color: #dc143c; /* Vermelho escuro */
 }
-
