--- a/src/App.css
+++ b/src/App.css
@@ -63,9 +63,10 @@ select {
 
 input[type="text"]:focus,
 select:focus {
-  border-color: #ff6347; /* Realce da borda ao focar */
+  border-color: #03a138; /* Realce da borda ao focar */
   outline: none;
 }
+
 
 button {
   background-color: #ff4500; /* Vermelho */
